Fix gap in header and moved header image

--- a/TeaCozy/style.css
+++ b/TeaCozy/style.css
@@ -2,8 +2,8 @@ body {
     background-color: black;
     font-family: Helvetica, sans-serif;
     font-size: 22px;
-    color: seashell;
-    
+    color: seashell;  
+    margin: 0;  
 }
 
 .flex-container {
@@ -40,6 +40,7 @@ nav span {
 #nav-img {
     height: 50px;
     padding-left: 10px;
+    padding-top: 10px;
     text-align: right;
 }
 
